fix: fix scrollbar style error.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -60,12 +60,12 @@
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
   }
-  div[class~='sidebar'] {
+  div[class^="sidebar"] {
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
     overflow-x: hidden;
   }
-  div[class~='sidebar']::-webkit-scrollbar {
+  div[class^="sidebar"]::-webkit-scrollbar {
     width: 0 !important;
   }
 }
@@ -84,6 +84,12 @@
 }
 .menu {
   width: 300px;
+  -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
+}
+
+.menu::-webkit-scrollbar {
+  width: 0!important;
 }
 
 .menu__list .menu__list {
